Test/comp/Datatype.dfy.refresh.expect
Datatype.dfy(156,43): Error: PRE-TYPE: unresolved identifier: yy
1 resolution/type errors detected in Datatype.dfy
